move primary reaction <NeedActingChange, WaitActingChange> to GetLog reaction would solve pg stuck in waitactingchange

Fixes: https://tracker.ceph.com/issues/41190

Signed-off-by: chenqiuzhang <chen.qiuzhang@h3c.com>